<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="ifpb.pdm.junior.airsoft.LoginActivity"
    android:weightSum="1">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/logo_max"
        android:id="@+id/imageView"
        android:layout_weight="0.30" />

    <EditText
        android:id="@+id/etMail"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:inputType="textEmailAddress"
        android:hint="@string/login_email"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textColorHint="@android:color/primary_text_dark"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:inputType="textPassword"
        android:hint="@string/login_password"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textColorHint="@android:color/primary_text_dark"/>
    <Button
        android:id="@+id/btlogar"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:onClick="sendMain"
        android:text="@string/login_button" />

</LinearLayout>