<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ifpb.pdm.junior.airsoft.missionsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@color/colorPn"
            >
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/box_bt_mission"
                android:paddingTop="50dp"
                android:paddingBottom="50dp"
                android:drawablePadding="10dp"
                android:drawableTop="@drawable/ic_work"
                />
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="50dp"
                android:paddingBottom="50dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawablePadding="10dp"
                android:text="@string/box_bt_oldMission"
                android:drawableTop="@drawable/ic_work_check"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@color/colorPn">
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/box_bt_config"
                android:paddingTop="50dp"
                android:paddingBottom="50dp"
                android:drawablePadding="10dp"
                android:drawableTop="@drawable/ic_settings"
                />
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawablePadding="10dp"
                android:paddingTop="50dp"
                android:paddingBottom="50dp"
                android:text="@string/box_bt_Galery"
                android:drawableTop="@drawable/ic_view_quilt"
                />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
